api/crates/postgres/tests/integration/external_services/snapshots/integration__external_services__create____test_context_wrapped_fails.snap
---
source: crates/postgres/tests/integration/external_services/create.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
INSERT INTO
  "external_services" (
    "slug",
    "kind",
    "name",
    "base_url",
    "url_pattern"
  )
VALUES
  ($1, $2, $3, $4, $5)
RETURNING
  "id",
  "slug",
  "kind",
  "name",
  "base_url",
  "url_pattern"'''
rows_affected = 0
rows_returned = 0
